<resources>
    <string name="app_name">Sleep Tracker</string>

    <string name="btn_add_sleep">Add Sleep Data</string>
    <string name="btn_view_sleep">View Sleep Data</string>

    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="fell_asleep">Fell asleep:</string>
    <string name="duration">Duration:</string>
    <string name="woke_up">Woke up:</string>
    <string name="show_sleep_data">Show Sleep Data</string>
</resources>